--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nodemon": "^2.0.19",
     "short-id": "^0.1.0-1",
     "shortid": "^2.2.16",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
+    "redis": "^3.1.2"
   }
 }
